spacing fixed

--- a/matches/matches.css
+++ b/matches/matches.css
@@ -116,13 +116,13 @@ a {
 }
 
 #matchTable {
-    padding-left: 15%;
+    padding-left: 7%;
     padding-right: 7%;
     padding-top: 2%;
     padding-bottom: 2%;
 }
 
 .col-special {
-    width: 19%;
+    width: 12%;
     text-align: center;
 }
