--- a/player/player.css
+++ b/player/player.css
@@ -123,7 +123,7 @@ a {
 }
 
 #heroTable {
-    padding-left: 17%;
+    padding-left: 15%;
     padding-right: 7%;
     padding-top: 2%;
     padding-bottom: 2%;
